Fix cut off Game Poster logos.

--- a/src/components/GamesPosters/index.css
+++ b/src/components/GamesPosters/index.css
@@ -32,11 +32,14 @@
   }
 
   & img {
-    object-fit: cover;
     width: 100%;
     height: 100%;
     transition: all 0.4s;
     opacity: 0.98;
+  }
+
+  & .background {
+    object-fit: cover;
   }
 }
 
